# audio-midi-shell-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: sine_synth.rs
src/: lib.rs
