[package]
name = "audio-midi-shell"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Prototyping shell for audio development."
repository = "https://github.com/sourcebox/audio-midi-shell-rs"
license = "MIT"
keywords = ["audio", "midi", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
log = "0.4.28"
tinyaudio = "2.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
midir = "0.10.3"

# Ensure compatibility with legacy macOS versions.
[target.'cfg(target_os = "macos")'.dependencies]
midir = "0.9.1"
