[package]
name = "audio-midi-shell"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Prototyping shell for audio development."
repository = "https://github.com/sourcebox/audio-midi-shell-rs"
license = "MIT"
keywords = ["audio", "midi", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
interflow = { git = "https://github.com/SolarLiner/interflow", rev = "6825910c2b5fa2a44b918033bd222f20604e98a3" }
log = "0.4.28"

[target.'cfg(not(target_os = "macos"))'.dependencies]
midir = "0.10.3"

# Ensure compatibility with legacy macOS versions.
[target.'cfg(target_os = "macos")'.dependencies]
midir = "0.9.1"
